--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
 body{
     font-family: 'Montserrat', sans-serif;
 }
+:root{
+    --primary-color: #6366f1;
+}
 /**container**/
 .container{
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0rem 1 rem;
 }
 
 .container-center{
@@ -13,4 +15,19 @@ body{
     margin: auto;
 }
 /**links**/
-
+.link{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    padd
+}
+.primarylink{
+    background-color:var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
+.secondarylink{
+    background-color:white;
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+}
