--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ hr{
 .link{
     text-decoration: none;
     padding: 0.5rem 1rem;
-    
+    color: white;
 }
 .primarylink{
     background-color:var(--primary-color);
@@ -43,3 +43,9 @@ hr{
     display: inline;
     padding: 0rem 0.5rem;
 }
+/**navigation**/
+.navigation{
+    background-color: var(--primary-color);
+    color: white;
+}
+
