--- a/styles.css
+++ b/styles.css
@@ -92,4 +92,19 @@ text-align: center;
 background-color: var(--off-white);
 }
 
+/**footer**/
+.footer{
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+}
+
+.footer .link{
+    color: white;
+  }  
+.footer ul{
+    padding-inline-start: 0px;
+}
 
