--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 body{
     font-family: 'Montserrat', sans-serif;
+    margin: 0px;
 }
 :root{
     --primary-color: #6366f1;
@@ -22,8 +23,11 @@ hr{
 }
 /**links**/
 .link{
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    /* margin-top: 1rem;
+    margin-bottom: 1rem; */
 }
 .primarylink{
     background-color:var(--primary-color);
@@ -65,6 +69,7 @@ hr{
 /**header**/
 .hero{
     padding: 2rem;
+    padding-top: 5rem;
 }
 .hero .hero-img{
     max-width: 350px;
@@ -72,6 +77,7 @@ hr{
     margin: auto;
 }
 .hero .hero-heading{
+    text-align: center;
     padding-top: 1rem;
     color: var(--dark-gray);
 }
@@ -107,4 +113,11 @@ background-color: var(--off-white);
 .footer ul{
     padding-inline-start: 0px;
 }
+.footer .footer-heading{
+    font-weight: bold;
+    font-size: large;
+}
 
+.margin-md{
+    margin: 2rem;
+}
