--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 body{
     font-family: 'Montserrat', sans-serif;
-    margin: 0px;
+    margin: 0px auto;
+        max-width: 85%;
+        width: 100%;
+    
 }
+
+
+
 :root{
     --primary-color: #6366f1;
     --off-white:#f1f5f9;
@@ -57,6 +63,13 @@ hr{
     border-bottom-left-radius: 1rem;
 
 }
+nav{
+    display: block;
+}
+.navigation .nav-pills{
+    text-align: right;
+    margin: 0.6rem 1rem;
+}
 .navigation .nav-brand{
     font-weight: bold;
     font-size: medium;
@@ -77,8 +90,15 @@ hr{
     display: block;
     margin: auto;
 }
+.hero .pr-img{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+    padding-right: 60px;
+}
 .hero .hero-heading{
     text-align: center;
+    margin-left: 40px;
     padding-top: 1rem;
     color: var(--dark-gray);
 }
@@ -89,6 +109,7 @@ color: var(--primary-color);
 /**sections**/
 .section{
     padding: 2rem;
+    border-radius: 1rem;
 }
 .section  h1{
 text-align: center;
@@ -96,7 +117,8 @@ text-align: center;
 
 .ow{
     padding: 2rem;
-background-color: var(--off-white);
+    border-radius: 1rem;
+    background-color: var(--off-white);
 }
 
 /**footer**/
@@ -105,6 +127,7 @@ background-color: var(--off-white);
     padding: 2rem 1rem;
     text-align: center;
     color: white;
+    margin-top: 1rem;
     border-top-right-radius: 1rem;
 }
 
